force-app/main/default/objects/Commercial_Bill__x/Commercial_Bill__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>CommercialBill</externalName>
    <label>Commercial Bill</label>
    <pluralLabel>Commercial Bills</pluralLabel>
</CustomObject>