force-app/main/default/objects/Commercial_Bill__x/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_EBD</complianceGroup>
    <description>Name attached to the product instance on CAP</description>
    <externalDeveloperName>AccountName</externalDeveloperName>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>