force-app/main/default/objects/Commercial_Bill__x/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CAPS</complianceGroup>
    <description>Account Status</description>
    <externalDeveloperName>AccountStatus</externalDeveloperName>
    <label>Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>