force-app/main/default/objects/Commercial_Bill__x/fields/CAP_Account_Limit__c.field-meta.xml
<CustomField>
    <fullName>CAP_Account_Limit__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>CAP Account Limit</description>
    <externalDeveloperName>CAPAccountLimit</externalDeveloperName>
    <label>CAP Account Limit ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>