force-app/main/default/objects/Commercial_Bill__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Associated Id of customer</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <label>Customer</label>
    <length>255</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commercial Bills</relationshipLabel>
    <relationshipName>Commercial_Bills</relationshipName>
    <type>IndirectLookup</type>
</CustomField>