force-app/main/default/objects/Commercial_Bill__x/fields/Expires__c.field-meta.xml
<CustomField>
    <fullName>Expires__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Expiry Date</description>
    <externalDeveloperName>Expires</externalDeveloperName>
    <label>Expiry Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>