force-app/main/default/objects/Commercial_Bill__x/fields/Facility_Limit__c.field-meta.xml
<CustomField>
    <fullName>Facility_Limit__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Facility Limit</description>
    <externalDeveloperName>FacilityLimit</externalDeveloperName>
    <label>Facility Limit ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>