force-app/main/default/objects/Commercial_Bill__x/fields/Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Loan Term Years</description>
    <externalDeveloperName>LoanTermYears</externalDeveloperName>
    <label>Loan Term (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>