force-app/main/default/objects/Commercial_Bill__x/fields/Loan_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_Months__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Loan Term (Months)</description>
    <externalDeveloperName>LoanTermMonths</externalDeveloperName>
    <label>Loan Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>