force-app/main/default/objects/Commercial_Bill__x/fields/Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Opening_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Date of creation of the OLL account in CAP</description>
    <externalDeveloperName>OpeningDate</externalDeveloperName>
    <label>Date Opened</label>
    <length>50</length>
    <type>Text</type>
</CustomField>