force-app/main/default/objects/Commercial_Bill__x/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Product Code</description>
    <externalDeveloperName>ProductCode</externalDeveloperName>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>