force-app/main/default/objects/Commercial_Bill__x/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Product Name</description>
    <externalDeveloperName>ProductName</externalDeveloperName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>