force-app/main/default/objects/Commercial_Bill__x/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Purpose</description>
    <externalDeveloperName>Purpose</externalDeveloperName>
    <label>Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>